2008-12-07  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp (scheme::labelEx): Added visited.

        * vm.scm (VM): Fixed the error check of SHIFTJ.

        * compiler.scm (define-pass2/tracable): Added for debug.
                       (pass3/$label): Added visited? check.

2008-12-06  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass2/collect-call): Added an opportunity of varialbe renaming.
                                 (pp-iform): Added code for $RECEIVE node.

2008-12-05  higepon  <higepon@users.sourceforge.jp>

        * Fixed optimization bug. Rewrote pass2/optimize-local-ref, pass2/remove-vars and pass2/$let.

2008-12-04  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm : pass2/$label to pass2/dispatch-table.

        * compiler.scm : Fixed: pass1/asm-1-arg passes wrong "tail?" flag to later process.
                        (pass2/classify-local-ref-call): Fixed for set-count != 0 condition.

2008-12-03  higepon  <higepon@users.sourceforge.jp>

        * Makefile.am: ./mosh => mosh.

        * VM.cpp (VM::run): Added SHIFTJ Instruction.

        * compiler.scm: Fixed the bug of embedded/jump optimization which is across the let boundary.
                        See the comment on pass3/$call.

2008-12-01  higepon  <higepon@users.sourceforge.jp>

        * tail-context => #t when starting compilation.

        * compiler.scm (iform-copy-zip-lvs): Fixed the bug of miss copying of $lambda.lvars.ref-count.
                                             See http://d.hatena.ne.jp/higepon/20081201/1228113798.

2008-11-30  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (imap): Adde inlinable map.

        * tools/psyntax-r6rs/rev10_to_10/Makefile (all): Added normal mode and rescue mode.

2008-11-29  higepon  <higepon@users.sourceforge.jp>

        * example/affine.scm : Added.

        * Psyntax pass through the and/or to backend.

2008-11-28  higepon  <higepon@users.sourceforge.jp>
